maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:46: error: ';' expected but '=' found.
  xModDir:List[Int] = List(0, 1, 0, -1);
                    ^ShortestPathMaze:47: error: ';' expected but '=' found.
  yModDir:List[Int] = List(1, 0, -1, 0);
                    ^